<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F1FF">



    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="409dp"
        android:layout_height="270dp"
        android:elevation="@dimen/_40sdp"
        android:background="@drawable/rounded_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:text="Profile"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_130sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <FrameLayout
            android:id="@+id/imagepreview"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_130sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/rounded_camera"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">


        </FrameLayout>


        <TextView
            android:id="@+id/name"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_140sdp"
            android:background="@color/white"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            tools:ignore="MissingConstraints" />


    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout">


        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_pet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_29sdp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="36dp"
            android:text="@string/pets"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="344dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_back_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="84dp"
            android:background="@drawable/ic_heart_favourite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="169dp"
            android:layout_height="41dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="84dp"
            android:text="@string/favourite"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="344dp"
            android:layout_marginTop="84dp"
            android:background="@drawable/ic_back_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_100sdp"
            android:background="@drawable/ic_petservice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="169dp"
            android:layout_height="41dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="@dimen/_100sdp"
            android:text="@string/addpets"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="344dp"
            android:layout_marginTop="@dimen/_100sdp"
            android:background="@drawable/ic_back_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_134sdp"
            android:background="@drawable/ic_invitefriend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="169dp"
            android:layout_height="41dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="@dimen/_134sdp"
            android:text="@string/friend"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="344dp"
            android:layout_marginTop="@dimen/_134sdp"
            android:background="@drawable/ic_back_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_166sdp"
            android:background="@drawable/ic_help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="169dp"
            android:layout_height="41dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="@dimen/_166sdp"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="344dp"
            android:layout_marginTop="@dimen/_160sdp"
            android:background="@drawable/ic_back_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />






        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_198sdp"
            android:background="@drawable/ic_help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="169dp"
            android:layout_height="41dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="@dimen/_198sdp"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="344dp"
            android:layout_marginTop="@dimen/_198sdp"
            android:background="@drawable/ic_back_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu_item_navigation"
            style="@style/CustomBottomNavigationView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
